--- a/index.html
+++ b/index.html
@@ -11,11 +11,55 @@
 <!-- 以下方式只是刷新不跳转到其他页面 -->
 <!-- <meta http-equiv="refresh" content="10"> -->
 <!-- 以下方式定时转到其他页面 -->
-<meta http-equiv="refresh" content="0;url=public/index.html"> 
+<!-- <meta http-equiv="refresh" content="50;url=public/index.html"> -->
 </head>
 <title>Hiperion's Blog | Coding Anything</title>
+<script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
+<script src="jquery/jquery.shCircleLoader.js" type="text/javascript"></script>
+<style type="text/css">
+body {text-align:center;}
+h2 {margin:5px;padding:0}
+div[id] {width:200px; height:200px;margin:200px auto;}
+span {font-family:monospace;font-size: 14px}
+pre {text-align:left;margin:0 auto;border:1px solid #888;padding:3px;width:400px;background:#eee}
+.myns > div {
+    box-shadow: 0 0 6px black, inset 0 0 6px black;
+}
 
+</style>
 </head>
 <body>
+
+
+
+  <div id="shclFireballs"></div>
+
+  <script type="text/javascript">
+
+  $('#shclFireballs').shCircleLoader({
+      color: "red",
+      dots: 24,
+      dotsRadius: 13,
+      keyframes:
+         "0%   {background: red;    {prefix}transform: scale(1)}\
+          20%  {background: orange; {prefix}transform: scale(.4)}\
+          40%  {background: red;    {prefix}transform: scale(0)}\
+          50%  {background: red;    {prefix}transform: scale(1)}\
+          70%  {background: orange; {prefix}transform: scale(.4)}\
+          90%  {background: red;    {prefix}transform: scale(0)}\
+          100% {background: red;    {prefix}transform: scale(1)}"
+  });
+
+
+  var i = 10;
+  setInterval(function() {
+      $('#shclFireballs').shCircleLoader('progress', i);
+      if (i-- < 1) {
+        $('#shclFireballs').shCircleLoader('destroy');
+        window.location.href="public/index.html"
+      };
+  }, 800);
+  </script>
+
 </body>
 </html>
