--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <title>Hiperion's Blog | Coding Anything</title>
 <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-<script src="jquery/jquery.shCircleLoader.js" type="text/javascript"></script>
+<script src="public/jquery/jquery.shCircleLoader.js" type="text/javascript"></script>
 <style type="text/css">
 body {text-align:center;}
 h2 {margin:5px;padding:0}
