--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
         <input type="submit" value="Open App" />
     </form>
  
+ <!-- button to Open App to specific screen for existing app users -->
+    <form action="com.bloomsky://deeplink/8/zhangsan" target="_blank">
+        <input type="submit" value="Bloomsky deeplink test" />
+    </form>
 </body>
 </html>
