--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <form action="com.bloomsky://deeplink/8/zhangsan" target="_blank">
         <input type="submit" value="Bloomsky deeplink test" />
     </form>
+    
+    <a href="intent://deeplink/8/zhangsan/#Intent;scheme=com.bloomsky;package=com.bloomsky.bloomsky;end"> Bloomsky deeplink for chrome </a>
 </body>
 </html>
