--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         <input type="submit" value="Bloomsky deeplink test" />
     </form>
     
-    <a href="intent://deeplink/8/zhangsan/#Intent;scheme=com.bloomsky;package=com.bloomsky.bloomsky;end"> Bloomsky deeplink for chrome </a>
+    <a href="intent://deeplink/8/zhangsan/#Intent;scheme=com.bloomsky;package=com.airbnb.deeplinkdispatch.sample;end"> Bloomsky deeplink for chrome </a>
 </body>
 </html>
