--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
         <input type="submit" value="Bloomsky deeplink test" />
     </form>
     
-    
+    <form action="bloomsky://play/play/04E67683227B/http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
+        <input type="submit" value="Play timelapse" />
+    </form>
+   
     <a href="intent://deeplink/8/zhangsan/#Intent;scheme=com.bloomsky;package=com.airbnb.deeplinkdispatch.sample;end"> Bloomsky deeplink for chrome </a>
 </body>
 </html>
