--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <input type="submit" value="Bloomsky deeplink test" />
     </form>
     
-    <form action="bloomsky://play/play/04E67683227B/http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
+    <form action="bloomsky://play/play/04E67683227B/storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
         <input type="submit" value="Play timelapse" />
     </form>
    
