--- a/index.html
+++ b/index.html
@@ -29,8 +29,14 @@
     <form action="com.bloomsky://deeplink/8/zhangsan" target="_blank">
         <input type="submit" value="Bloomsky deeplink test" />
     </form>
-    
-    <form action="bloomsky://play/play/04E67683227B/storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
+    <form action="bloomsky://play/04E67683227B" target="_blank">
+        <input type="text" name="url" value="http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4"/>
+        <input type="submit" value="Play timelapse" />
+    </form>
+    <form action="bloomsky://play/04E67683227B/storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
+        <input type="submit" value="Play timelapse" />
+    </form>
+    <form action="bloomsky://play/04E67683227B/http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
         <input type="submit" value="Play timelapse" />
     </form>
    
