--- a/index.html
+++ b/index.html
@@ -16,26 +16,25 @@
 <body>
  
     <!-- button to Download App for new app users -->
-    <form action="http://hastrk.com/serve?action=click&publisher_id=1&site_id=2" target="_blank">
-        <input type="submit" value="Download" />
+    <form action="bloomsky://station/04E67683227B" target="_blank">
+        <input type="submit" value="Open MyBlue Device" />
     </form>
  
     <!-- button to Open App to specific screen for existing app users -->
-    <form action="yourapp://app.com/?screen=xxxxx" target="_blank">
-        <input type="submit" value="Open App" />
+    <form action="bloomsky://play/04E67683227B/url" target="_blank">
+        <input type="submit" value="Play MyBlue timelapse " />
     </form>
  
- <!-- button to Open App to specific screen for existing app users -->
-    <form action="com.bloomsky://deeplink/8/zhangsan" target="_blank">
-        <input type="submit" value="Bloomsky deeplink test" />
-    </form>
+
     <form action="bloomsky://play/04E67683227B" target="_blank">
         <input type="text" name="url" value="http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4"/>
         <input type="submit" value="Play timelapse" />
     </form>
+    
     <form action="bloomsky://play/04E67683227B/storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
         <input type="submit" value="Play timelapse" />
     </form>
+    
     <form action="bloomsky://play/04E67683227B/http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
         <input type="submit" value="Play timelapse" />
     </form>
