--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </form>
     
     <form action="bloomsky://play/04E67683227B/storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
-        <input type="submit" value="Play timelapse2" />
+        <input type="submit" value="Play timelapse" />
     </form>
     
     <form action="bloomsky://play/04E67683227B/http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
-        <input type="submit" value="Play timelapse3" />
+        <input type="submit" value="Play timelapse" />
     </form>
    
     <a href="intent://deeplink/8/zhangsan/#Intent;scheme=com.bloomsky;package=com.airbnb.deeplinkdispatch.sample;end"> Bloomsky deeplink for chrome </a>
