--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </form>
  
 
-    <form action="bloomsky://play/04E67683227B?url=http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
+    <form action="bloomsky://play/04E67683227B?url=storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
        
-        <input type="submit" value="Play timelapse1" />
+        <input type="submit" value="Play timelapse2" />
     </form>
     
     <form action="bloomsky://play/04E67683227B/storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
