--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     </form>
  
     <!-- button to Open App to specific screen for existing app users -->
-    <form action="bloomsky://play/04E67683227B/url" target="_blank">
+    <form action="bloomsky://play/04E67683227B" target="_blank">
         <input type="submit" value="Play MyBlue timelapse " />
     </form>
  
 
-    <form action="bloomsky://play/04E67683227B?url=storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
-       
-        <input type="submit" value="Play timelapse2" />
+    <form action="bloomsky://play/04E67683227B" target="_blank">
+       <input type="text" name="url" value="http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4"/>
+        <input type="submit" value="Play timelapse3" />
     </form>
     
     <form action="bloomsky://play/04E67683227B/storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
