--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
 
     <form action="bloomsky://play/04E67683227B" target="_blank">
        <input type="text" name="url" value="http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4"/>
-        <input type="submit" value="Play timelapse3" />
+        <input type="submit" value="Play timelapse url input" />
     </form>
     
-    <form action="bloomsky://play/04E67683227B/storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
-        <input type="submit" value="Play timelapse" />
+    <form action="bloomsky://play/04E67693E17F" target="_blank">
+        <input type="text" name="url" value="http://storage.googleapis.com/bloomsky-video/eaB1rJytnpS5mZy4_9_2016-02-21.mp4"/>
+        <input type="submit" value="Play timelapse Korera" />
     </form>
     
-    <form action="bloomsky://play/04E67683227B/http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4" target="_blank">
-        <input type="submit" value="Play timelapse" />
+    <form action="bloomsky://play/04E67683227B?url=http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-20.mp4" target="_blank">
+        <input type="submit" value="Play timelapse url param" />
     </form>
    
     <a href="intent://deeplink/8/zhangsan/#Intent;scheme=com.bloomsky;package=com.airbnb.deeplinkdispatch.sample;end"> Bloomsky deeplink for chrome </a>
