--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     </form>
    
     <a href="intent://deeplink/8/zhangsan/#Intent;scheme=com.bloomsky;package=com.airbnb.deeplinkdispatch.sample;end"> Bloomsky deeplink for chrome </a>
+    <a href="bloomsky://play/04E67683227B"> A label open Bloomsky </a>
 </body>
 </html>
