--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </form>
     
     
-    <a href="intent://deeplink/8/zhangsan/#Intent;scheme=com.bloomsky;package=com.airbnb.deeplinkdispatch.sample;end"> Bloomsky deeplink for chrome </a>
+    <a href="intent://station/04E67683222B/#Intent;scheme=bloomsky;package=com.bloomsky.bloomsky;end"> Open station(MySky) for chrome </a>
     <br/>
     <a href="bloomsky://play/04E67683227B"> A label open Bloomsky </a>
 </body>
