--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     
     <a href="intent://station/04E67683222B/#Intent;scheme=bloomsky;package=com.bloomsky.bloomsky;end"> Open station(MySky) for chrome </a>
     <br/>
-    <a href="bloomsky://play/04E67683227B"> A label open Bloomsky </a>
+    <a href="bloomsky://play/04E67683227B"> Play timelapse BlueSky </a>
+    <br/>
+    <a href="bloomsky://play/04E67693E131"> Play timelapse Menlo Park Apt</a>
 </body>
 </html>
