--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
  
     <!-- button to Download App for new app users -->
     <form action="bloomsky://station/04E67683227B" target="_blank">
-        <input type="submit" value="Open station (MyBlue)" />
+        <input type="submit" value="Open station (BlueSky)" />
     </form>
  
     <!-- button to Open App to specific screen for existing app users -->
     <form action="bloomsky://play/04E67683227B" target="_blank">
         <input type="hidden" name="url" value="http://storage.googleapis.com/bloomsky-video/eaB1rJytnZSmmpy0_8_2016-02-21.mp4"/>
-        <input type="submit" value="Play timelapse (MyBlue) 2016-02-21" />
+        <input type="submit" value="Play timelapse (BlueSky) 2016-02-21" />
     </form>
  
-    <form action="bloomsky://play/04E67693E17F" target="_blank">
+    <form action="bloomsky://play/04E67693E131" target="_blank">
         <input type="hidden" name="url" value="http://storage.googleapis.com/bloomsky-video/eaB1rJytnpS5mZy4_9_2016-02-21.mp4"/>
-        <input type="submit" value="Play timelapse (Korea) 2016-02-21" />
+        <input type="submit" value="Play timelapse (Menlo Park weather) 2016-02-21" />
     </form>
     
     <br/>
-    <a href="bloomsky://play/04E67683227B"> Play timelapse BlueSky </a>
+    <a href="bloomsky://station/04E67683227B"> Open station (BlueSky) </a>
     <br/>
-    <a href="bloomsky://play/04E67693E131"> Play timelapse Menlo Park Apt</a>
+    <a href="bloomsky://play/04E67683227B"> Play timelapse (BlueSky) if today is ready</a>
+    <br/>
+    <a href="bloomsky://play/04E67693E131"> Play timelapse (Menlo Park weather) if today is ready </a>
     
     <br/>
     <br/>
