--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <!-- 以下方式只是刷新不跳转到其他页面 -->
 <!-- <meta http-equiv="refresh" content="10"> -->
 <!-- 以下方式定时转到其他页面 -->
-<!-- <meta http-equiv="refresh" content="50;url=public/index.html"> -->
+<meta http-equiv="refresh" content="50;url=public/index.html">
 </head>
 <title>Hiperion's Blog | Coding Anything</title>
 <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-<script src="jquery/jquery.shCircleLoader.js" type="text/javascript"></script>
+<script src="uploads/jquery/jquery.shCircleLoader.js" type="text/javascript"></script>
 <style type="text/css">
 body {text-align:center;}
 h2 {margin:5px;padding:0}
@@ -51,14 +51,14 @@ pre {text-align:left;margin:0 auto;border:1px solid #888;padding:3px;width:400px
   });
 
 
-  var i = 5;
-  setInterval(function() {
-      $('#shclFireballs').shCircleLoader('progress', i);
-      if (i-- < 1) {
-        $('#shclFireballs').shCircleLoader('destroy');
-        window.location.href="public/index.html"
-      };
-  }, 600);
+  // var i = 5;
+  // setInterval(function() {
+  //     $('#shclFireballs').shCircleLoader('progress', i);
+  //     if (i-- < 1) {
+  //       $('#shclFireballs').shCircleLoader('destroy');
+  //       window.location.href="public/index.html"
+  //     };
+  // }, 600);
   </script>
 
 </body>
