--- a/admin.html
+++ b/admin.html
@@ -13,5 +13,6 @@
 </head>
 <body>
 <a href="http://hiperion.duoshuo.com/admin/settings/">多说admin</a>
+<a href="http://sitecenter.baidu.com/sc-web/20402152/home/site/getJs?siteId=8804800&castk=14ffdnj7c173b3e00d805">百度统计</a>
 </body>
 </html>
